Bump java to 17 (#63)